// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataModel empty data set processing should generated the expected results 1`] = `
{
  "data": [],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "property": "chrome",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "property": "firefox",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "missing": false,
        "property": "safari",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [],
    ],
    "values": [
      [],
      [],
      [],
      [],
    ],
  },
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with area bucket calculation 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          0.012,
        ],
      ],
      "datum": [
        {
          "curb-weight": 2548,
        },
        {
          "curb-weight": 2548,
        },
        {
          "curb-weight": 2823,
        },
        {
          "curb-weight": 2337,
        },
        {
          "curb-weight": 2824,
        },
        {
          "curb-weight": 2507,
        },
        {
          "curb-weight": 2844,
        },
        {
          "curb-weight": 2954,
        },
        {
          "curb-weight": 2395,
        },
        {
          "curb-weight": 2395,
        },
        {
          "curb-weight": 2710,
        },
        {
          "curb-weight": 2765,
        },
      ],
      "keys": [
        2000,
        3000,
      ],
      "values": [
        [
          2548,
        ],
        [
          2548,
        ],
        [
          2823,
        ],
        [
          2337,
        ],
        [
          2824,
        ],
        [
          2507,
        ],
        [
          2844,
        ],
        [
          2954,
        ],
        [
          2395,
        ],
        [
          2395,
        ],
        [
          2710,
        ],
        [
          2765,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          0.004,
        ],
      ],
      "datum": [
        {
          "curb-weight": 3086,
        },
        {
          "curb-weight": 3053,
        },
        {
          "curb-weight": 3055,
        },
        {
          "curb-weight": 3230,
        },
        {
          "curb-weight": 3380,
        },
        {
          "curb-weight": 3505,
        },
      ],
      "keys": [
        3000,
        4500,
      ],
      "values": [
        [
          3086,
        ],
        [
          3053,
        ],
        [
          3055,
        ],
        [
          3230,
        ],
        [
          3380,
        ],
        [
          3505,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          0.001,
        ],
      ],
      "datum": [
        {
          "curb-weight": 1488,
        },
        {
          "curb-weight": 1874,
        },
      ],
      "keys": [
        0,
        2000,
      ],
      "values": [
        [
          1488,
        ],
        [
          1874,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "curb-weight",
        "scope": "test",
        "type": "key",
        "valueType": "range",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "curb-weight",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        0.012,
      ],
    ],
    "groups": [
      [
        2000,
        3000,
      ],
      [
        3000,
        4500,
      ],
      [
        0,
        2000,
      ],
    ],
    "keys": [
      [
        1488,
        3505,
      ],
    ],
    "values": [
      [
        1488,
        3505,
      ],
    ],
  },
  "reduced": {
    "sortedGroupDomain": [
      [
        0,
        2000,
      ],
      [
        2000,
        3000,
      ],
      [
        3000,
        4500,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with average bucket calculation 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          25.5455,
        ],
      ],
      "datum": [
        {
          "engine-size": 130,
          "highway-mpg": 27,
        },
        {
          "engine-size": 130,
          "highway-mpg": 27,
        },
        {
          "engine-size": 109,
          "highway-mpg": 30,
        },
        {
          "engine-size": 136,
          "highway-mpg": 22,
        },
        {
          "engine-size": 136,
          "highway-mpg": 25,
        },
        {
          "engine-size": 136,
          "highway-mpg": 25,
        },
        {
          "engine-size": 136,
          "highway-mpg": 25,
        },
        {
          "engine-size": 131,
          "highway-mpg": 20,
        },
        {
          "engine-size": 131,
          "highway-mpg": 22,
        },
        {
          "engine-size": 108,
          "highway-mpg": 29,
        },
        {
          "engine-size": 108,
          "highway-mpg": 29,
        },
      ],
      "keys": [
        "100 - 150",
      ],
      "values": [
        [
          27,
        ],
        [
          27,
        ],
        [
          30,
        ],
        [
          22,
        ],
        [
          25,
        ],
        [
          25,
        ],
        [
          25,
        ],
        [
          20,
        ],
        [
          22,
        ],
        [
          29,
        ],
        [
          29,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          24.4286,
        ],
      ],
      "datum": [
        {
          "engine-size": 152,
          "highway-mpg": 26,
        },
        {
          "engine-size": 164,
          "highway-mpg": 28,
        },
        {
          "engine-size": 164,
          "highway-mpg": 28,
        },
        {
          "engine-size": 164,
          "highway-mpg": 25,
        },
        {
          "engine-size": 209,
          "highway-mpg": 22,
        },
        {
          "engine-size": 209,
          "highway-mpg": 22,
        },
        {
          "engine-size": 209,
          "highway-mpg": 20,
        },
      ],
      "keys": [
        ">150",
      ],
      "values": [
        [
          26,
        ],
        [
          28,
        ],
        [
          28,
        ],
        [
          25,
        ],
        [
          22,
        ],
        [
          22,
        ],
        [
          20,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          48,
        ],
      ],
      "datum": [
        {
          "engine-size": 61,
          "highway-mpg": 53,
        },
        {
          "engine-size": 90,
          "highway-mpg": 43,
        },
      ],
      "keys": [
        "<100",
      ],
      "values": [
        [
          53,
        ],
        [
          43,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "engine-size",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "highway-mpg",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        48,
      ],
    ],
    "groups": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
    "keys": [
      [
        130,
        152,
        109,
        136,
        131,
        108,
        164,
        209,
        61,
        90,
      ],
    ],
    "values": [
      [
        20,
        53,
      ],
    ],
  },
  "reduced": {
    "sortedGroupDomain": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with hard-coded buckets 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          11,
        ],
      ],
      "datum": [
        {
          "engine-size": 130,
        },
        {
          "engine-size": 130,
        },
        {
          "engine-size": 109,
        },
        {
          "engine-size": 136,
        },
        {
          "engine-size": 136,
        },
        {
          "engine-size": 136,
        },
        {
          "engine-size": 136,
        },
        {
          "engine-size": 131,
        },
        {
          "engine-size": 131,
        },
        {
          "engine-size": 108,
        },
        {
          "engine-size": 108,
        },
      ],
      "keys": [
        "100 - 150",
      ],
      "values": [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
    {
      "aggValues": [
        [
          0,
          7,
        ],
      ],
      "datum": [
        {
          "engine-size": 152,
        },
        {
          "engine-size": 164,
        },
        {
          "engine-size": 164,
        },
        {
          "engine-size": 164,
        },
        {
          "engine-size": 209,
        },
        {
          "engine-size": 209,
        },
        {
          "engine-size": 209,
        },
      ],
      "keys": [
        ">150",
      ],
      "values": [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
    },
    {
      "aggValues": [
        [
          0,
          2,
        ],
      ],
      "datum": [
        {
          "engine-size": 61,
        },
        {
          "engine-size": 90,
        },
      ],
      "keys": [
        "<100",
      ],
      "values": [
        undefined,
        undefined,
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "engine-size",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [],
  },
  "domain": {
    "aggValues": [
      [
        0,
        11,
      ],
    ],
    "groups": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
    "keys": [
      [
        130,
        152,
        109,
        136,
        131,
        108,
        164,
        209,
        61,
        90,
      ],
    ],
    "values": [],
  },
  "reduced": {
    "sortedGroupDomain": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - grouped example should generated the expected results 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          6.1,
        ],
      ],
      "datum": [
        {
          "regular": 3.2,
          "total": 2.9,
          "type": "Whole economy",
        },
      ],
      "keys": [
        "Whole economy",
      ],
      "values": [
        [
          2.9,
          3.2,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          7.9,
        ],
      ],
      "datum": [
        {
          "regular": 4.2,
          "total": 3.7,
          "type": "Finance and business services",
        },
      ],
      "keys": [
        "Finance and business services",
      ],
      "values": [
        [
          3.7,
          4.2,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          6.7,
        ],
      ],
      "datum": [
        {
          "regular": 3.4,
          "total": 3.3,
          "type": "Public sector",
        },
      ],
      "keys": [
        "Public sector",
      ],
      "values": [
        [
          3.3,
          3.4,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          6.8,
        ],
      ],
      "datum": [
        {
          "regular": 3.6,
          "total": 3.2,
          "type": "Construction",
        },
      ],
      "keys": [
        "Construction",
      ],
      "values": [
        [
          3.2,
          3.6,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          5.9,
        ],
      ],
      "datum": [
        {
          "regular": 3.2,
          "total": 2.7,
          "type": "Private sector",
        },
      ],
      "keys": [
        "Private sector",
      ],
      "values": [
        [
          2.7,
          3.2,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          5.6,
        ],
      ],
      "datum": [
        {
          "regular": 2.9,
          "total": 2.7,
          "type": "Manufacturing",
        },
      ],
      "keys": [
        "Manufacturing",
      ],
      "values": [
        [
          2.7,
          2.9,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          2.6,
        ],
      ],
      "datum": [
        {
          "regular": 1.5,
          "total": 1.1,
          "type": "Wholesaling, retailing, hotels and restaurants",
        },
      ],
      "keys": [
        "Wholesaling, retailing, hotels and restaurants",
      ],
      "values": [
        [
          1.1,
          1.5,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "total",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "property": "regular",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        7.9,
      ],
    ],
    "groups": [
      [
        "Whole economy",
      ],
      [
        "Finance and business services",
      ],
      [
        "Public sector",
      ],
      [
        "Construction",
      ],
      [
        "Private sector",
      ],
      [
        "Manufacturing",
      ],
      [
        "Wholesaling, retailing, hotels and restaurants",
      ],
    ],
    "keys": [
      [
        "Whole economy",
        "Finance and business services",
        "Public sector",
        "Construction",
        "Private sector",
        "Manufacturing",
        "Wholesaling, retailing, hotels and restaurants",
      ],
    ],
    "values": [
      [
        1.1,
        3.7,
      ],
      [
        1.5,
        4.2,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked and normalised example should generated the expected results for 100% stacked area example 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.6,
          "coal": 0.8,
          "imported": 0.2,
          "month": "Jan",
          "naturalGas": 9.4,
          "nuclear": 1.2,
          "petroleum": 5.6,
          "windSolarHydro": 0.7,
        },
      ],
      "keys": [
        "Jan",
      ],
      "values": [
        [
          29.946524064171125,
          50.26737967914438,
          8.556149732620321,
          6.4171122994652405,
          3.7433155080213907,
          1.0695187165775402,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.6,
          "coal": 1.1,
          "imported": 0.1,
          "month": "Feb",
          "naturalGas": 8.8,
          "nuclear": 1.2,
          "petroleum": 5.6,
          "windSolarHydro": 0.5,
        },
      ],
      "keys": [
        "Feb",
      ],
      "values": [
        [
          31.46067415730337,
          49.438202247191015,
          8.988764044943819,
          6.741573033707865,
          2.8089887640449436,
          0.5617977528089887,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.6,
          "coal": 1.4,
          "imported": 0.1,
          "month": "Mar",
          "naturalGas": 9,
          "nuclear": 1.2,
          "petroleum": 5.4,
          "windSolarHydro": 0.6,
        },
      ],
      "keys": [
        "Mar",
      ],
      "values": [
        [
          30.167597765363126,
          50.27932960893854,
          8.938547486033519,
          6.703910614525139,
          3.3519553072625694,
          0.5586592178770949,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.3,
          "coal": 0.6,
          "imported": 0.1,
          "month": "Apr",
          "naturalGas": 6.3,
          "nuclear": 1.2,
          "petroleum": 5.9,
          "windSolarHydro": 0.5,
        },
      ],
      "keys": [
        "Apr",
      ],
      "values": [
        [
          38.56209150326798,
          41.1764705882353,
          8.49673202614379,
          7.843137254901961,
          3.2679738562091507,
          0.6535947712418301,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.3,
          "coal": 0.5,
          "imported": 0.2,
          "month": "May",
          "naturalGas": 4.5,
          "nuclear": 1.2,
          "petroleum": 5.6,
          "windSolarHydro": 0.5,
        },
      ],
      "keys": [
        "May",
      ],
      "values": [
        [
          42.10526315789474,
          33.83458646616542,
          9.774436090225565,
          9.022556390977444,
          3.759398496240602,
          1.5037593984962407,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.3,
          "coal": 0.5,
          "imported": 0.1,
          "month": "Jun",
          "naturalGas": 3.8,
          "nuclear": 1.2,
          "petroleum": 5.8,
          "windSolarHydro": 0.4,
        },
      ],
      "keys": [
        "Jun",
      ],
      "values": [
        [
          46.03174603174603,
          30.158730158730158,
          10.317460317460318,
          9.523809523809524,
          3.174603174603175,
          0.7936507936507937,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.3,
          "coal": 0.4,
          "imported": 0.2,
          "month": "Jul",
          "naturalGas": 3.9,
          "nuclear": 1.2,
          "petroleum": 5.6,
          "windSolarHydro": 0.4,
        },
      ],
      "keys": [
        "Jul",
      ],
      "values": [
        [
          44.44444444444444,
          30.952380952380953,
          10.317460317460318,
          9.523809523809524,
          3.174603174603175,
          1.5873015873015874,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.3,
          "coal": 0.4,
          "imported": 0.1,
          "month": "Aug",
          "naturalGas": 3.7,
          "nuclear": 1.3,
          "petroleum": 5.9,
          "windSolarHydro": 0.4,
        },
      ],
      "keys": [
        "Aug",
      ],
      "values": [
        [
          46.456692913385815,
          29.13385826771653,
          10.236220472440943,
          10.236220472440943,
          3.1496062992125977,
          0.7874015748031494,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.3,
          "coal": 0.7,
          "imported": 0.1,
          "month": "Sep",
          "naturalGas": 4.1,
          "nuclear": 1.2,
          "petroleum": 5.8,
          "windSolarHydro": 0.6,
        },
      ],
      "keys": [
        "Sep",
      ],
      "values": [
        [
          44.27480916030535,
          31.297709923664122,
          9.923664122137406,
          9.160305343511451,
          4.580152671755726,
          0.7633587786259544,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.6,
          "coal": 0.6,
          "imported": 0.1,
          "month": "Oct",
          "naturalGas": 5.9,
          "nuclear": 1,
          "petroleum": 5.5,
          "windSolarHydro": 0.6,
        },
      ],
      "keys": [
        "Oct",
      ],
      "values": [
        [
          37.41496598639456,
          40.13605442176871,
          10.884353741496598,
          6.802721088435375,
          4.081632653061225,
          0.6802721088435374,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.6,
          "coal": 0.9,
          "imported": 0.1,
          "month": "Nov",
          "naturalGas": 7.3,
          "nuclear": 1,
          "petroleum": 5.9,
          "windSolarHydro": 0.7,
        },
      ],
      "keys": [
        "Nov",
      ],
      "values": [
        [
          35.54216867469879,
          43.97590361445783,
          9.638554216867469,
          6.024096385542168,
          4.216867469879518,
          0.6024096385542168,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "bioenergyWaste": 1.6,
          "coal": 0.7,
          "imported": 0.1,
          "month": "Dec",
          "naturalGas": 8.2,
          "nuclear": 1.1,
          "petroleum": 5.8,
          "windSolarHydro": 0.6,
        },
      ],
      "keys": [
        "Dec",
      ],
      "values": [
        [
          33.33333333333333,
          47.126436781609186,
          9.195402298850574,
          6.32183908045977,
          3.4482758620689653,
          0.5747126436781609,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "month",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "petroleum",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "property": "naturalGas",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "property": "bioenergyWaste",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "missing": false,
        "property": "nuclear",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 4,
        "missing": false,
        "property": "windSolarHydro",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 5,
        "missing": false,
        "property": "imported",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        100,
      ],
    ],
    "groups": [
      [
        "Jan",
      ],
      [
        "Feb",
      ],
      [
        "Mar",
      ],
      [
        "Apr",
      ],
      [
        "May",
      ],
      [
        "Jun",
      ],
      [
        "Jul",
      ],
      [
        "Aug",
      ],
      [
        "Sep",
      ],
      [
        "Oct",
      ],
      [
        "Nov",
      ],
      [
        "Dec",
      ],
    ],
    "keys": [
      [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    ],
    "values": [
      [
        5.4,
        5.9,
      ],
      [
        3.7,
        9.4,
      ],
      [
        1.3,
        1.6,
      ],
      [
        1,
        1.3,
      ],
      [
        0.4,
        0.7,
      ],
      [
        0.1,
        0.2,
      ],
    ],
  },
  "reduced": {
    "aggValuesExtent": [
      0,
      100,
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked and normalised example should generated the expected results for 100% stacked columns example 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "asian": 7317,
          "black": 3742,
          "chinese": 284,
          "mixed": 4052,
          "other": 1338,
          "type": "Nursery",
          "white": 24801,
        },
      ],
      "keys": [
        "Nursery",
      ],
      "values": [
        [
          59.712524678576585,
          9.755862666730872,
          17.616892184716136,
          9.00948620407377,
          0.6837771464342467,
          3.221457119468387,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "asian": 527391,
          "black": 258774,
          "chinese": 22844,
          "mixed": 298866,
          "other": 95064,
          "type": "Primary",
          "white": 3475379,
        },
      ],
      "keys": [
        "Primary",
      ],
      "values": [
        [
          74.28693389376268,
          6.388321614734185,
          11.273090029365255,
          5.531346949908065,
          0.4882951522320629,
          2.03201235999776,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "asian": 377168,
          "black": 198080,
          "chinese": 13317,
          "mixed": 182721,
          "other": 62662,
          "type": "Secondary",
          "white": 2436365,
        },
      ],
      "keys": [
        "Secondary",
      ],
      "values": [
        [
          74.49944393701765,
          5.587263359806844,
          11.53308567100458,
          6.056912595216422,
          0.4072087289504093,
          1.9160857080040963,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "asian": 12328,
          "black": 8546,
          "chinese": 404,
          "mixed": 7426,
          "other": 2109,
          "type": "Special",
          "white": 91696,
        },
      ],
      "keys": [
        "Special",
      ],
      "values": [
        [
          74.84837848647854,
          6.0615954746181915,
          10.062934151776604,
          6.9758140218269675,
          0.3297716902431658,
          1.7215061750565264,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          100,
        ],
      ],
      "datum": [
        {
          "asian": 605,
          "black": 1104,
          "chinese": 4,
          "mixed": 1448,
          "other": 229,
          "type": "Referral units",
          "white": 12347,
        },
      ],
      "keys": [
        "Referral units",
      ],
      "values": [
        [
          78.45841011628646,
          9.201245472453454,
          3.844443032344157,
          7.015314227616446,
          0.02541780517252335,
          1.455169346126962,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "white",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "property": "mixed",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "property": "asian",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "missing": false,
        "property": "black",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 4,
        "missing": false,
        "property": "chinese",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 5,
        "missing": false,
        "property": "other",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        100,
      ],
    ],
    "groups": [
      [
        "Nursery",
      ],
      [
        "Primary",
      ],
      [
        "Secondary",
      ],
      [
        "Special",
      ],
      [
        "Referral units",
      ],
    ],
    "keys": [
      [
        "Nursery",
        "Primary",
        "Secondary",
        "Special",
        "Referral units",
      ],
    ],
    "values": [
      [
        12347,
        3475379,
      ],
      [
        1448,
        298866,
      ],
      [
        605,
        527391,
      ],
      [
        1104,
        258774,
      ],
      [
        4,
        22844,
      ],
      [
        229,
        95064,
      ],
    ],
  },
  "reduced": {
    "aggValuesExtent": [
      0,
      100,
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked example should generated the expected results 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          0,
          6002,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 388,
          "localAuthority": 274,
          "ownerOccupied": 4567,
          "privateRented": 773,
          "type": "Semi-detached house",
        },
      ],
      "keys": [
        "Semi-detached house",
      ],
      "values": [
        [
          4567,
          773,
          274,
          388,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          4433,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 422,
          "localAuthority": 231,
          "ownerOccupied": 2842,
          "privateRented": 938,
          "type": "Medium/large terraced house",
        },
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "values": [
        [
          2842,
          938,
          231,
          422,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          3972,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 19,
          "localAuthority": 4,
          "ownerOccupied": 3655,
          "privateRented": 294,
          "type": "Detached house",
        },
      ],
      "keys": [
        "Detached house",
      ],
      "values": [
        [
          3655,
          294,
          4,
          19,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          3584,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 919,
          "localAuthority": 621,
          "ownerOccupied": 905,
          "privateRented": 1139,
          "type": "Purpose-built flat low rise",
        },
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "values": [
        [
          905,
          1139,
          621,
          919,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          2298,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 295,
          "localAuthority": 168,
          "ownerOccupied": 1013,
          "privateRented": 822,
          "type": "Small terraced house",
        },
      ],
      "keys": [
        "Small terraced house",
      ],
      "values": [
        [
          1013,
          822,
          168,
          295,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          2108,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 228,
          "localAuthority": 180,
          "ownerOccupied": 1486,
          "privateRented": 214,
          "type": "Bungalow",
        },
      ],
      "keys": [
        "Bungalow",
      ],
      "values": [
        [
          1486,
          214,
          180,
          228,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          928,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 100,
          "localAuthority": 37,
          "ownerOccupied": 252,
          "privateRented": 539,
          "type": "Converted flat",
        },
      ],
      "keys": [
        "Converted flat",
      ],
      "values": [
        [
          252,
          539,
          37,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          0,
          408,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 68,
          "localAuthority": 109,
          "ownerOccupied": 97,
          "privateRented": 134,
          "type": "Purpose-built flat high rise",
        },
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "values": [
        [
          97,
          134,
          109,
          68,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "missing": false,
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        6002,
      ],
    ],
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        97,
        4567,
      ],
      [
        134,
        1139,
      ],
      [
        4,
        621,
      ],
      [
        19,
        919,
      ],
    ],
  },
  "reduced": {
    "aggValuesExtent": [
      0,
      6002,
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked with accumulation and normalised example should generated the expected results 1`] = `
{
  "data": [
    {
      "aggValues": [
        [
          76.0913,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 388,
          "localAuthority": 274,
          "ownerOccupied": 4567,
          "privateRented": 773,
          "type": "Semi-detached house",
        },
      ],
      "keys": [
        "Semi-detached house",
      ],
      "values": [
        [
          76.09130289903365,
          88.97034321892703,
          93.5354881706098,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          64.1101,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 422,
          "localAuthority": 231,
          "ownerOccupied": 2842,
          "privateRented": 938,
          "type": "Medium/large terraced house",
        },
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "values": [
        [
          64.11008346492217,
          85.26956914053689,
          90.48048725468081,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          92.0191,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 19,
          "localAuthority": 4,
          "ownerOccupied": 3655,
          "privateRented": 294,
          "type": "Detached house",
        },
      ],
      "keys": [
        "Detached house",
      ],
      "values": [
        [
          92.01913393756294,
          99.42094662638469,
          99.52165156092649,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          25.2511,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 919,
          "localAuthority": 621,
          "ownerOccupied": 905,
          "privateRented": 1139,
          "type": "Purpose-built flat low rise",
        },
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "values": [
        [
          25.251116071428573,
          57.03125,
          74.35825892857143,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          44.0818,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 295,
          "localAuthority": 168,
          "ownerOccupied": 1013,
          "privateRented": 822,
          "type": "Small terraced house",
        },
      ],
      "keys": [
        "Small terraced house",
      ],
      "values": [
        [
          44.081810269799824,
          79.852045256745,
          87.16275021758051,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          70.4934,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 228,
          "localAuthority": 180,
          "ownerOccupied": 1486,
          "privateRented": 214,
          "type": "Bungalow",
        },
      ],
      "keys": [
        "Bungalow",
      ],
      "values": [
        [
          70.4933586337761,
          80.64516129032258,
          89.18406072106262,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          27.1552,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 100,
          "localAuthority": 37,
          "ownerOccupied": 252,
          "privateRented": 539,
          "type": "Converted flat",
        },
      ],
      "keys": [
        "Converted flat",
      ],
      "values": [
        [
          27.155172413793103,
          85.23706896551724,
          89.22413793103448,
          100,
        ],
      ],
    },
    {
      "aggValues": [
        [
          23.7745,
          100,
        ],
      ],
      "datum": [
        {
          "housingAssociation": 68,
          "localAuthority": 109,
          "ownerOccupied": 97,
          "privateRented": 134,
          "type": "Purpose-built flat high rise",
        },
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "values": [
        [
          23.774509803921568,
          56.61764705882353,
          83.33333333333333,
          100,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "processor": [Function],
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "processor": [Function],
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "processor": [Function],
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "missing": false,
        "processor": [Function],
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        23.7745,
        100,
      ],
    ],
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        97,
        4567,
      ],
      [
        231,
        5340,
      ],
      [
        340,
        5614,
      ],
      [
        408,
        6002,
      ],
    ],
  },
  "reduced": {
    "aggValuesExtent": [
      23.7745,
      100,
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked with accumulation example should generated the expected results 1`] = `
{
  "data": [
    {
      "datum": [
        {
          "housingAssociation": 388,
          "localAuthority": 274,
          "ownerOccupied": 4567,
          "privateRented": 773,
          "type": "Semi-detached house",
        },
      ],
      "keys": [
        "Semi-detached house",
      ],
      "values": [
        [
          4567,
          5340,
          5614,
          6002,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 422,
          "localAuthority": 231,
          "ownerOccupied": 2842,
          "privateRented": 938,
          "type": "Medium/large terraced house",
        },
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "values": [
        [
          2842,
          3780,
          4011,
          4433,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 19,
          "localAuthority": 4,
          "ownerOccupied": 3655,
          "privateRented": 294,
          "type": "Detached house",
        },
      ],
      "keys": [
        "Detached house",
      ],
      "values": [
        [
          3655,
          3949,
          3953,
          3972,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 919,
          "localAuthority": 621,
          "ownerOccupied": 905,
          "privateRented": 1139,
          "type": "Purpose-built flat low rise",
        },
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "values": [
        [
          905,
          2044,
          2665,
          3584,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 295,
          "localAuthority": 168,
          "ownerOccupied": 1013,
          "privateRented": 822,
          "type": "Small terraced house",
        },
      ],
      "keys": [
        "Small terraced house",
      ],
      "values": [
        [
          1013,
          1835,
          2003,
          2298,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 228,
          "localAuthority": 180,
          "ownerOccupied": 1486,
          "privateRented": 214,
          "type": "Bungalow",
        },
      ],
      "keys": [
        "Bungalow",
      ],
      "values": [
        [
          1486,
          1700,
          1880,
          2108,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 100,
          "localAuthority": 37,
          "ownerOccupied": 252,
          "privateRented": 539,
          "type": "Converted flat",
        },
      ],
      "keys": [
        "Converted flat",
      ],
      "values": [
        [
          252,
          791,
          828,
          928,
        ],
      ],
    },
    {
      "datum": [
        {
          "housingAssociation": 68,
          "localAuthority": 109,
          "ownerOccupied": 97,
          "privateRented": 134,
          "type": "Purpose-built flat high rise",
        },
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "values": [
        [
          97,
          231,
          340,
          408,
        ],
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "processor": [Function],
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "processor": [Function],
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "processor": [Function],
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "missing": false,
        "processor": [Function],
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        97,
        4567,
      ],
      [
        231,
        5340,
      ],
      [
        340,
        5614,
      ],
      [
        408,
        6002,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel missing and invalid data processing should generated the expected results 1`] = `
{
  "data": [
    {
      "datum": {
        "chrome": "illegal value",
        "firefox": 26.85,
        "safari": 2.79,
        "year": "2009",
      },
      "keys": [
        "2009",
      ],
      "values": [
        null,
        NaN,
        26.85,
        2.79,
      ],
    },
    {
      "datum": {
        "firefox": 31.15,
        "ie": 54.39,
        "safari": 4.22,
        "year": "2010",
      },
      "keys": [
        "2010",
      ],
      "values": [
        54.39,
        null,
        31.15,
        4.22,
      ],
    },
    {
      "datum": {
        "chrome": 15.01,
        "ie": 44.03,
        "safari": 5.94,
        "year": "2011",
      },
      "keys": [
        "2011",
      ],
      "values": [
        44.03,
        15.01,
        null,
        5.94,
      ],
    },
    {
      "datum": {
        "chrome": 25.99,
        "firefox": 22.69,
        "ie": "illegal value",
        "year": "2012",
      },
      "keys": [
        "2012",
      ],
      "values": [
        NaN,
        25.99,
        22.69,
        null,
      ],
    },
    {
      "datum": {
        "chrome": 31.71,
        "firefox": undefined,
        "safari": undefined,
        "year": "2013",
      },
      "keys": [
        "2013",
      ],
      "values": [
        null,
        31.71,
        NaN,
        NaN,
      ],
    },
    {
      "datum": {
        "firefox": 14.77,
        "ie": 17.75,
        "safari": 12.63,
        "year": "2014",
      },
      "keys": [
        "2014",
      ],
      "values": [
        17.75,
        null,
        14.77,
        12.63,
      ],
    },
    {
      "datum": {
        "chrome": 42.27,
        "ie": -13.3,
        "safari": "illegal value",
        "year": "2015",
      },
      "keys": [
        "2015",
      ],
      "values": [
        -13.3,
        42.27,
        null,
        NaN,
      ],
    },
    {
      "datum": {
        "chrome": 47.79,
        "firefox": 8.97,
        "ie": -8.94,
        "year": "2016",
      },
      "keys": [
        "2016",
      ],
      "values": [
        -8.94,
        47.79,
        8.97,
        null,
      ],
    },
    {
      "datum": {
        "chrome": 51.76,
        "firefox": 6.75,
        "safari": 14.54,
        "year": "2017",
      },
      "keys": [
        "2017",
      ],
      "values": [
        null,
        51.76,
        6.75,
        14.54,
      ],
    },
    {
      "datum": {
        "firefox": "illegal value",
        "ie": 3.2,
        "safari": 14.44,
        "year": "2018",
      },
      "keys": [
        "2018",
      ],
      "values": [
        3.2,
        null,
        NaN,
        14.44,
      ],
    },
    {
      "datum": {
        "chrome": 61.72,
        "ie": 2.7,
        "safari": 15.23,
        "year": "2019",
      },
      "keys": [
        "2019",
      ],
      "values": [
        2.7,
        61.72,
        null,
        15.23,
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "invalidValue": NaN,
        "missing": false,
        "missingValue": null,
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "invalidValue": NaN,
        "missing": false,
        "missingValue": null,
        "property": "chrome",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 2,
        "invalidValue": NaN,
        "missing": false,
        "missingValue": null,
        "property": "firefox",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 3,
        "invalidValue": NaN,
        "missing": false,
        "missingValue": null,
        "property": "safari",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    ],
    "values": [
      [
        -13.3,
        54.39,
      ],
      [
        null,
        61.72,
      ],
      [
        null,
        31.15,
      ],
      [
        null,
        15.23,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel repeated property processing should generated the expected results 1`] = `
{
  "data": [
    {
      "datum": {
        "browser": "Chrome",
        "share": 0.6869,
        "year": 2020,
      },
      "keys": [],
      "values": [
        0,
        0.6869,
      ],
    },
    {
      "datum": {
        "browser": "Edge",
        "share": 0.0463,
        "year": 2020,
      },
      "keys": [],
      "values": [
        0.1478760779303737,
        0.05,
      ],
    },
    {
      "datum": {
        "browser": "Safari",
        "share": 0.087,
        "year": 2020,
      },
      "keys": [],
      "values": [
        0.4257425742574256,
        0.087,
      ],
    },
    {
      "datum": {
        "browser": "Firefox",
        "share": 0.0955,
        "year": 2020,
      },
      "keys": [],
      "values": [
        0.7307569466624081,
        0.0955,
      ],
    },
    {
      "datum": {
        "browser": "Other",
        "share": 0.0843,
        "year": 2020,
      },
      "keys": [],
      "values": [
        1,
        0.0843,
      ],
    },
  ],
  "defs": {
    "keys": [],
    "values": [
      {
        "id": "angle",
        "index": 0,
        "missing": false,
        "processor": [Function],
        "property": "share",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": "radius",
        "index": 1,
        "missing": false,
        "processor": [Function],
        "property": "share",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [],
    "values": [
      [
        0,
        1,
      ],
      [
        0.05,
        0.6869,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel ungrouped processing - accumulated and normalised properties should generated the expected results 1`] = `
{
  "data": [
    {
      "datum": {
        "population": 4159000,
        "religion": "Christian",
      },
      "keys": [],
      "values": [
        0,
        "Christian",
        4159000,
      ],
    },
    {
      "datum": {
        "population": 97000,
        "religion": "Buddhist",
      },
      "keys": [],
      "values": [
        0.1352271965379232,
        "Buddhist",
        97000,
      ],
    },
    {
      "datum": {
        "population": 456000,
        "religion": "Hindu",
      },
      "keys": [],
      "values": [
        0.7709344297471291,
        "Hindu",
        456000,
      ],
    },
    {
      "datum": {
        "population": 168000,
        "religion": "Jewish",
      },
      "keys": [],
      "values": [
        1.0051423577715735,
        "Jewish",
        168000,
      ],
    },
    {
      "datum": {
        "population": 1215000,
        "religion": "Muslim",
      },
      "keys": [],
      "values": [
        2.698967551519787,
        "Muslim",
        1215000,
      ],
    },
    {
      "datum": {
        "population": 123000,
        "religion": "Sikh",
      },
      "keys": [],
      "values": [
        2.8704412131091117,
        "Sikh",
        123000,
      ],
    },
    {
      "datum": {
        "population": 174000,
        "religion": "Other",
      },
      "keys": [],
      "values": [
        3.1130137099915722,
        "Other",
        174000,
      ],
    },
    {
      "datum": {
        "population": 2274000,
        "religion": "None",
      },
      "keys": [],
      "values": [
        6.283185307179586,
        "None",
        2274000,
      ],
    },
  ],
  "defs": {
    "keys": [],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "processor": [Function],
        "property": "population",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "index": 1,
        "missing": false,
        "property": "religion",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "category",
      },
      {
        "id": undefined,
        "index": 2,
        "missing": false,
        "property": "population",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [],
    "values": [
      [
        0,
        6.283185307179586,
      ],
      [
        "Christian",
        "Buddhist",
        "Hindu",
        "Jewish",
        "Muslim",
        "Sikh",
        "Other",
        "None",
      ],
      [
        97000,
        4159000,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel ungrouped processing should generated the expected results 1`] = `
{
  "data": [
    {
      "datum": {
        "date": 2019-01-07T00:00:00.000Z,
        "diesel": 130.33,
        "petrol": 120.27,
      },
      "keys": [
        2019-01-07T00:00:00.000Z,
      ],
      "values": [
        120.27,
        130.33,
      ],
    },
    {
      "datum": {
        "date": 2019-01-14T00:00:00.000Z,
        "diesel": 129.47,
        "petrol": 119.53,
      },
      "keys": [
        2019-01-14T00:00:00.000Z,
      ],
      "values": [
        119.53,
        129.47,
      ],
    },
    {
      "datum": {
        "date": 2019-01-21T00:00:00.000Z,
        "diesel": 128.92,
        "petrol": 119.12,
      },
      "keys": [
        2019-01-21T00:00:00.000Z,
      ],
      "values": [
        119.12,
        128.92,
      ],
    },
    {
      "datum": {
        "date": 2019-01-28T00:00:00.000Z,
        "diesel": 129.1,
        "petrol": 119.29,
      },
      "keys": [
        2019-01-28T00:00:00.000Z,
      ],
      "values": [
        119.29,
        129.1,
      ],
    },
    {
      "datum": {
        "date": 2019-02-04T00:00:00.000Z,
        "diesel": 129.13,
        "petrol": 119.13,
      },
      "keys": [
        2019-02-04T00:00:00.000Z,
      ],
      "values": [
        119.13,
        129.13,
      ],
    },
    {
      "datum": {
        "date": 2019-02-11T00:00:00.000Z,
        "diesel": 129.17,
        "petrol": 118.97,
      },
      "keys": [
        2019-02-11T00:00:00.000Z,
      ],
      "values": [
        118.97,
        129.17,
      ],
    },
    {
      "datum": {
        "date": 2019-02-18T00:00:00.000Z,
        "diesel": 129.23,
        "petrol": 119.05,
      },
      "keys": [
        2019-02-18T00:00:00.000Z,
      ],
      "values": [
        119.05,
        129.23,
      ],
    },
    {
      "datum": {
        "date": 2019-02-25T00:00:00.000Z,
        "diesel": 129.66,
        "petrol": 119.22,
      },
      "keys": [
        2019-02-25T00:00:00.000Z,
      ],
      "values": [
        119.22,
        129.66,
      ],
    },
    {
      "datum": {
        "date": 2019-03-04T00:00:00.000Z,
        "diesel": 130.25,
        "petrol": 119.72,
      },
      "keys": [
        2019-03-04T00:00:00.000Z,
      ],
      "values": [
        119.72,
        130.25,
      ],
    },
    {
      "datum": {
        "date": 2019-03-11T00:00:00.000Z,
        "diesel": 130.59,
        "petrol": 120.1,
      },
      "keys": [
        2019-03-11T00:00:00.000Z,
      ],
      "values": [
        120.1,
        130.59,
      ],
    },
    {
      "datum": {
        "date": 2019-03-18T00:00:00.000Z,
        "diesel": 130.85,
        "petrol": 120.48,
      },
      "keys": [
        2019-03-18T00:00:00.000Z,
      ],
      "values": [
        120.48,
        130.85,
      ],
    },
    {
      "datum": {
        "date": 2019-03-25T00:00:00.000Z,
        "diesel": 131.15,
        "petrol": 120.83,
      },
      "keys": [
        2019-03-25T00:00:00.000Z,
      ],
      "values": [
        120.83,
        131.15,
      ],
    },
    {
      "datum": {
        "date": 2019-03-31T23:00:00.000Z,
        "diesel": 131.48,
        "petrol": 121.7,
      },
      "keys": [
        2019-03-31T23:00:00.000Z,
      ],
      "values": [
        121.7,
        131.48,
      ],
    },
    {
      "datum": {
        "date": 2019-04-07T23:00:00.000Z,
        "diesel": 132.08,
        "petrol": 122.75,
      },
      "keys": [
        2019-04-07T23:00:00.000Z,
      ],
      "values": [
        122.75,
        132.08,
      ],
    },
    {
      "datum": {
        "date": 2019-04-14T23:00:00.000Z,
        "diesel": 132.96,
        "petrol": 124.06,
      },
      "keys": [
        2019-04-14T23:00:00.000Z,
      ],
      "values": [
        124.06,
        132.96,
      ],
    },
    {
      "datum": {
        "date": 2019-04-21T23:00:00.000Z,
        "diesel": 133.99,
        "petrol": 125.43,
      },
      "keys": [
        2019-04-21T23:00:00.000Z,
      ],
      "values": [
        125.43,
        133.99,
      ],
    },
    {
      "datum": {
        "date": 2019-04-28T23:00:00.000Z,
        "diesel": 134.6,
        "petrol": 126.36,
      },
      "keys": [
        2019-04-28T23:00:00.000Z,
      ],
      "values": [
        126.36,
        134.6,
      ],
    },
    {
      "datum": {
        "date": 2019-05-05T23:00:00.000Z,
        "diesel": 135.41,
        "petrol": 127.5,
      },
      "keys": [
        2019-05-05T23:00:00.000Z,
      ],
      "values": [
        127.5,
        135.41,
      ],
    },
    {
      "datum": {
        "date": 2019-05-12T23:00:00.000Z,
        "diesel": 135.36,
        "petrol": 127.97,
      },
      "keys": [
        2019-05-12T23:00:00.000Z,
      ],
      "values": [
        127.97,
        135.36,
      ],
    },
    {
      "datum": {
        "date": 2019-05-19T23:00:00.000Z,
        "diesel": 135.82,
        "petrol": 128.51,
      },
      "keys": [
        2019-05-19T23:00:00.000Z,
      ],
      "values": [
        128.51,
        135.82,
      ],
    },
    {
      "datum": {
        "date": 2019-05-26T23:00:00.000Z,
        "diesel": 136.45,
        "petrol": 129.14,
      },
      "keys": [
        2019-05-26T23:00:00.000Z,
      ],
      "values": [
        129.14,
        136.45,
      ],
    },
    {
      "datum": {
        "date": 2019-06-02T23:00:00.000Z,
        "diesel": 136.39,
        "petrol": 129.41,
      },
      "keys": [
        2019-06-02T23:00:00.000Z,
      ],
      "values": [
        129.41,
        136.39,
      ],
    },
    {
      "datum": {
        "date": 2019-06-09T23:00:00.000Z,
        "diesel": 135.4,
        "petrol": 128.89,
      },
      "keys": [
        2019-06-09T23:00:00.000Z,
      ],
      "values": [
        128.89,
        135.4,
      ],
    },
    {
      "datum": {
        "date": 2019-06-16T23:00:00.000Z,
        "diesel": 133.76,
        "petrol": 127.66,
      },
      "keys": [
        2019-06-16T23:00:00.000Z,
      ],
      "values": [
        127.66,
        133.76,
      ],
    },
    {
      "datum": {
        "date": 2019-06-23T23:00:00.000Z,
        "diesel": 131.81,
        "petrol": 126.66,
      },
      "keys": [
        2019-06-23T23:00:00.000Z,
      ],
      "values": [
        126.66,
        131.81,
      ],
    },
    {
      "datum": {
        "date": 2019-06-30T23:00:00.000Z,
        "diesel": 131.55,
        "petrol": 126.49,
      },
      "keys": [
        2019-06-30T23:00:00.000Z,
      ],
      "values": [
        126.49,
        131.55,
      ],
    },
    {
      "datum": {
        "date": 2019-07-07T23:00:00.000Z,
        "diesel": 131.68,
        "petrol": 126.86,
      },
      "keys": [
        2019-07-07T23:00:00.000Z,
      ],
      "values": [
        126.86,
        131.68,
      ],
    },
    {
      "datum": {
        "date": 2019-07-14T23:00:00.000Z,
        "diesel": 131.86,
        "petrol": 127.13,
      },
      "keys": [
        2019-07-14T23:00:00.000Z,
      ],
      "values": [
        127.13,
        131.86,
      ],
    },
    {
      "datum": {
        "date": 2019-07-21T23:00:00.000Z,
        "diesel": 132.21,
        "petrol": 127.81,
      },
      "keys": [
        2019-07-21T23:00:00.000Z,
      ],
      "values": [
        127.81,
        132.21,
      ],
    },
    {
      "datum": {
        "date": 2019-07-28T23:00:00.000Z,
        "diesel": 132.6,
        "petrol": 128.03,
      },
      "keys": [
        2019-07-28T23:00:00.000Z,
      ],
      "values": [
        128.03,
        132.6,
      ],
    },
    {
      "datum": {
        "date": 2019-08-04T23:00:00.000Z,
        "diesel": 132.61,
        "petrol": 128.37,
      },
      "keys": [
        2019-08-04T23:00:00.000Z,
      ],
      "values": [
        128.37,
        132.61,
      ],
    },
    {
      "datum": {
        "date": 2019-08-11T23:00:00.000Z,
        "diesel": 132.59,
        "petrol": 128.36,
      },
      "keys": [
        2019-08-11T23:00:00.000Z,
      ],
      "values": [
        128.36,
        132.59,
      ],
    },
    {
      "datum": {
        "date": 2019-08-18T23:00:00.000Z,
        "diesel": 132.6,
        "petrol": 128.17,
      },
      "keys": [
        2019-08-18T23:00:00.000Z,
      ],
      "values": [
        128.17,
        132.6,
      ],
    },
    {
      "datum": {
        "date": 2019-08-25T23:00:00.000Z,
        "diesel": 132.51,
        "petrol": 128.22,
      },
      "keys": [
        2019-08-25T23:00:00.000Z,
      ],
      "values": [
        128.22,
        132.51,
      ],
    },
    {
      "datum": {
        "date": 2019-09-01T23:00:00.000Z,
        "diesel": 132.29,
        "petrol": 127.86,
      },
      "keys": [
        2019-09-01T23:00:00.000Z,
      ],
      "values": [
        127.86,
        132.29,
      ],
    },
    {
      "datum": {
        "date": 2019-09-08T23:00:00.000Z,
        "diesel": 131.89,
        "petrol": 127.79,
      },
      "keys": [
        2019-09-08T23:00:00.000Z,
      ],
      "values": [
        127.79,
        131.89,
      ],
    },
    {
      "datum": {
        "date": 2019-09-15T23:00:00.000Z,
        "diesel": 131.35,
        "petrol": 126.92,
      },
      "keys": [
        2019-09-15T23:00:00.000Z,
      ],
      "values": [
        126.92,
        131.35,
      ],
    },
    {
      "datum": {
        "date": 2019-09-22T23:00:00.000Z,
        "diesel": 131.52,
        "petrol": 126.78,
      },
      "keys": [
        2019-09-22T23:00:00.000Z,
      ],
      "values": [
        126.78,
        131.52,
      ],
    },
    {
      "datum": {
        "date": 2019-09-29T23:00:00.000Z,
        "diesel": 131.83,
        "petrol": 126.92,
      },
      "keys": [
        2019-09-29T23:00:00.000Z,
      ],
      "values": [
        126.92,
        131.83,
      ],
    },
    {
      "datum": {
        "date": 2019-10-06T23:00:00.000Z,
        "diesel": 131.82,
        "petrol": 126.87,
      },
      "keys": [
        2019-10-06T23:00:00.000Z,
      ],
      "values": [
        126.87,
        131.82,
      ],
    },
    {
      "datum": {
        "date": 2019-10-13T23:00:00.000Z,
        "diesel": 131.89,
        "petrol": 126.91,
      },
      "keys": [
        2019-10-13T23:00:00.000Z,
      ],
      "values": [
        126.91,
        131.89,
      ],
    },
    {
      "datum": {
        "date": 2019-10-20T23:00:00.000Z,
        "diesel": 131.28,
        "petrol": 126.4,
      },
      "keys": [
        2019-10-20T23:00:00.000Z,
      ],
      "values": [
        126.4,
        131.28,
      ],
    },
    {
      "datum": {
        "date": 2019-10-28T00:00:00.000Z,
        "diesel": 130.6,
        "petrol": 125.77,
      },
      "keys": [
        2019-10-28T00:00:00.000Z,
      ],
      "values": [
        125.77,
        130.6,
      ],
    },
    {
      "datum": {
        "date": 2019-11-04T00:00:00.000Z,
        "diesel": 130.38,
        "petrol": 125.56,
      },
      "keys": [
        2019-11-04T00:00:00.000Z,
      ],
      "values": [
        125.56,
        130.38,
      ],
    },
    {
      "datum": {
        "date": 2019-11-11T00:00:00.000Z,
        "diesel": 130.42,
        "petrol": 125.59,
      },
      "keys": [
        2019-11-11T00:00:00.000Z,
      ],
      "values": [
        125.59,
        130.42,
      ],
    },
    {
      "datum": {
        "date": 2019-11-18T00:00:00.000Z,
        "diesel": 130.35,
        "petrol": 125.58,
      },
      "keys": [
        2019-11-18T00:00:00.000Z,
      ],
      "values": [
        125.58,
        130.35,
      ],
    },
    {
      "datum": {
        "date": 2019-11-25T00:00:00.000Z,
        "diesel": 130.08,
        "petrol": 125.32,
      },
      "keys": [
        2019-11-25T00:00:00.000Z,
      ],
      "values": [
        125.32,
        130.08,
      ],
    },
    {
      "datum": {
        "date": 2019-12-02T00:00:00.000Z,
        "diesel": 129.79,
        "petrol": 124.81,
      },
      "keys": [
        2019-12-02T00:00:00.000Z,
      ],
      "values": [
        124.81,
        129.79,
      ],
    },
    {
      "datum": {
        "date": 2019-12-09T00:00:00.000Z,
        "diesel": 129.79,
        "petrol": 124.75,
      },
      "keys": [
        2019-12-09T00:00:00.000Z,
      ],
      "values": [
        124.75,
        129.79,
      ],
    },
    {
      "datum": {
        "date": 2019-12-16T00:00:00.000Z,
        "diesel": 129.56,
        "petrol": 124.33,
      },
      "keys": [
        2019-12-16T00:00:00.000Z,
      ],
      "values": [
        124.33,
        129.56,
      ],
    },
    {
      "datum": {
        "date": 2019-12-23T00:00:00.000Z,
        "diesel": 129.81,
        "petrol": 124.16,
      },
      "keys": [
        2019-12-23T00:00:00.000Z,
      ],
      "values": [
        124.16,
        129.81,
      ],
    },
    {
      "datum": {
        "date": 2019-12-30T00:00:00.000Z,
        "diesel": 130.54,
        "petrol": 124.96,
      },
      "keys": [
        2019-12-30T00:00:00.000Z,
      ],
      "values": [
        124.96,
        130.54,
      ],
    },
  ],
  "defs": {
    "keys": [
      {
        "index": 0,
        "missing": false,
        "property": "date",
        "scope": "test",
        "type": "key",
        "valueType": "range",
      },
    ],
    "values": [
      {
        "id": undefined,
        "index": 0,
        "missing": false,
        "property": "petrol",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
      {
        "id": undefined,
        "index": 1,
        "missing": false,
        "property": "diesel",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        2019-01-07T00:00:00.000Z,
        2019-12-30T00:00:00.000Z,
      ],
    ],
    "values": [
      [
        118.97,
        129.41,
      ],
      [
        128.92,
        136.45,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "ungrouped",
}
`;
